# prompt-opt-env

./: .env.example  .gitignore  AGENT.md  ARCHITECTURE_UPGRADE.md  CLAUDE.md  README.md  RUN.md  agent.py  benchmark.py  copy_ui.py  inference.py  inference_run_output.txt  optimize.py  push_out.txt  push_ui_to_hf.py  web_app.py
.hf_bundle_test/: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
.hf_bundle_test/server/: Dockerfile  __init__.py  requirements.txt
.hf_bundle_test2/: client.py  demo_examples.py  models.py  optimize.py
.hf_bundle_test2/server/: actions.py  prompt_opt_env_environment.py
.hf_bundle_test2/templates/: landing.html
docs/: APP_FLOW.md  BACKEND_STRUCTURE.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  TECH_STACK.md
prompt_opt_env/: .dockerignore  Dockerfile.ui  README.md  __init__.py  client.py  llm_router.py  models.py  openenv.yaml  pyproject.toml  web_ui.py
prompt_opt_env/server/: Dockerfile  __init__.py  actions.py  actions_llm.py  app.py  grader.py  prompt_opt_env_environment.py  requirements.txt  task_bank.py
prompt_opt_env/templates/: index.html  results.html
templates/: index.html  landing.html  results.html
tests/: test_actions.py  test_client.py  test_environment.py  test_grader.py  test_llm_router.py  test_push_ui_to_hf.py
