[project]
name = "prompt-opt-env"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openenv-core==0.2.1",
    "fastapi==0.115.12",
    "jinja2>=3.1.4",
    "uvicorn==0.30.6",
    "pydantic==2.7.4",
    "openai>=2.7.2",
    "rouge-score==0.1.2",
    "numpy==1.26.4",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
]

[project.scripts]
server = "prompt_opt_env.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prompt_opt_env"]

[tool.hatch.build.targets.sdist]
include = [
    "prompt_opt_env/__init__.py",
    "prompt_opt_env/models.py",
    "prompt_opt_env/client.py",
    "prompt_opt_env/server/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
